# ctuner

./: .gitignore  .travis.yml  Android.md  Mac.md  ProjectHome.md  README.md  SignalGenerator.md
.github/workflows/: build.yml
android/: AndroidManifest.xml  README.md
docs/: 404.html  index.html  index.xml  sitemap.xml
docs/categories/: index.xml
docs/css/: custom.css
docs/doc/: index.html
docs/introduction/: index.xml
docs/tags/: index.xml
iphone/: AppDelegate.swift  Audio.h  Audio.m  DisplayView.swift  Dummy-Bridging-Header.h  Info.plist  MeterView.swift  ScopeView.swift  SpectrumView.swift  StaffView.swift  TunerView.swift  ViewController.swift
linux/: Makefile  Makefile.am  Makefile.de  Makefile.in  README.md  configure  configure.ac  temperaments.h  tuner.c  tuner.cpp  tuner.h
mac/: Changes  Info.plist  Makefile  PkgInfo  Readme.rtf  SigGen.icns  Tuner.c  Tuner.h  Tuner.icns
scripts/: build.sh
swift/: AppDelegate.swift  Audio.c  Audio.h  Audio.m  Audio.swift  Display.swift  DisplayView.swift  Info.plist  MainMenu.nib  MainMenu.xib  Makefile  Meter.swift  MeterView.swift  README.md  Scope.swift  ScopeView.swift  Spectrum.swift  SpectrumView.swift  StaffView.swift  Status.swift  StatusView.swift  Strobe.swift  StrobeView.swift  Temperaments.h  Tuner  Tuner-Bridging-Header.h  Tuner-Swift.h  Tuner.icns  TunerView.swift  main.swift
wiki/: Android.wiki  Mac.wiki  SignalGenerator.wiki  Tremolo.wiki
windows/: Changes  Makefile  Readme.txt  SigGen.c  SigGen.rc  Temperaments.h  Tuner.c  Tuner.cpp  Tuner.h  Tuner.manifest  Tuner.nsi  Tuner.rc
(+75 files in other folders)
